fixed hover problem and aligned fall, 15, good

--- a/style/_aside.scss
+++ b/style/_aside.scss
@@ -88,7 +88,7 @@ html,body {
 .StudentServices {
   @extend .CurrentSchedule;
 }
-a:hover {
+.CurrentSchedule:hover {
   width: 203px;
   height: 25px;
   background-color: #0b2535;
