--- a/style/_schedule.scss
+++ b/style/_schedule.scss
@@ -38,7 +38,7 @@
 .schedule-list{
   display: block;
   margin-top: 10px;
-  margin-left: 40px;
+  margin-left: 115px;
   .list-uno{
     .text-m-1{
       padding-top: 15px;
@@ -49,4 +49,11 @@
       padding-top: 10px;
     }
   }
+}
+.fall-2017 {
+  margin-top: 10px;
+}
+.Enrolled-credit-hours, .Current-semester-schedule, .Academic-Standing-Schedule {
+  @extend .text-m-1;
+  width: 100%;
 }
